crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@54.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'last'::jsonpath;"
---
SelectStmt@0..24
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..23
    TypeCast@7..23
      AConst@7..13
        Sconst@7..13 "'last'"
      Typecast@13..15 "::"
      TypeName@15..23
        Ident@15..23 "jsonpath"
  Ascii59@23..24 ";"

