crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@57.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$ ? (last > 0)'::jsonpath;"
---
SelectStmt@0..34
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..33
    TypeCast@7..33
      AConst@7..23
        Sconst@7..23 "'$ ? (last > 0)'"
      Typecast@23..25 "::"
      TypeName@25..33
        Ident@25..33 "jsonpath"
  Ascii59@33..34 ";"

