crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@61.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '1.type()'::jsonpath;"
---
SelectStmt@0..28
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..27
    TypeCast@7..27
      AConst@7..17
        Sconst@7..17 "'1.type()'"
      Typecast@17..19 "::"
      TypeName@19..27
        Ident@19..27 "jsonpath"
  Ascii59@27..28 ";"

